remove banner in small resolutions

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: "Write an awesome description for your new site here. You can edit 
 # Server
 baseurl: ""
 url: "https://pewen.github.io/lmoa"
+#url: "http://0.0.0.0:4000/"
 encoding: utf-8
 
 #time zone
